--- a/css/index.css
+++ b/css/index.css
@@ -286,8 +286,33 @@ footer {
     .main {
         margin: 2em;
     }
+    .image {
+        max-width: 70%;
+        ;
+    }
 
-
+}
+@media(max-width:500px) {
+nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+section {
+    display: flex;
+    flex-wrap: wrap;
+}
+.image {
+    max-width: 20%;
+    ;
+}
+footer {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    text-align: center;
+}
 }
 
 
