--- a/css/index.css
+++ b/css/index.css
@@ -154,14 +154,14 @@ h5 {
 /* Your code starts here! */
 
 nav {
-  top: 0;
-  width: 100%;
-  /* height: 5em; */
-  background-color: white;
-  padding: 1em 0 0 8em;
+  
+  width: 100%;  
+  padding-top: 2%;
   box-sizing: border-box;
- /* position: fixed; */
   margin-bottom: 2em;
+  display: flex;
+  justify-content: center;
+
 }
 
 .logo {
@@ -170,7 +170,7 @@ nav {
 }
 
 nav a {
-  /* margin: 0 3em; */
+  margin: 0 3em;
   text-decoration: none;
   color: black;
   letter-spacing: 1px;
@@ -275,8 +275,23 @@ footer {
 
 @media(max-width:800px){
     nav {
+        width: 100%;
         display: flex;
-        justify-content: space-around;
+        flex-direction: column-reverse;
+        justify-content: space-evenly;
+        
+}
+.mainimg {
+  display: none;
+}
+.navBar {
+  display: flex;
+  justify-content: space-evenly;
+ 
+}
+    .headimg {
+      display: flex;
+      align-items: ;
     }
     .first-section {
         display:flex;
@@ -304,13 +319,16 @@ nav {
     justify-content: center;
     padding: 0;
 }
+.mainimg {
+  display: block;
+}
 section {
     display: flex;
     flex-wrap: wrap;
 }
 .image {
     max-width: 95%;
-    ;
+    
 }
 footer {
     display: flex;
