--- a/css/index.css
+++ b/css/index.css
@@ -152,16 +152,17 @@ h5 {
 }
 
 /* Your code starts here! */
+body {
+  width: 100%;
+}
 
-nav {
-  
+nav { 
   width: 100%;  
   padding-top: 2%;
   box-sizing: border-box;
   margin-bottom: 2em;
   display: flex;
   justify-content: center;
-
 }
 
 .logo {
@@ -275,7 +276,7 @@ footer {
 
 @media(max-width:800px){
     nav {
-        width: 100%;
+        width: 80%;
         display: flex;
         flex-direction: column-reverse;
         justify-content: space-evenly;
@@ -285,13 +286,16 @@ footer {
   display: none;
 }
 .navBar {
+  width: 100%;
   display: flex;
   justify-content: space-evenly;
+  justify-content: center;
  
 }
     .headimg {
       display: flex;
-      align-items: ;
+      justify-content: center;
+      margin-bottom: 3%;
     }
     .first-section {
         display:flex;
@@ -341,6 +345,7 @@ nav { display: flex;
   margin: 5% auto;
   align-items: center;
   margin-top: 10px;
+  text-align: center;
 
 
 } 
@@ -348,15 +353,18 @@ nav { display: flex;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  border: 1px border black;  
+   
 }
 .navBar a {
+  margin-bottom: 5%;
   padding: 0.5em;
+  border-bottom: 1px solid black; 
    
 }
 .logo {
   margin: 0 auto;
 }
+
 }
 
 
