--- a/css/index.css
+++ b/css/index.css
@@ -322,9 +322,10 @@ nav {
     align-items: center;
     justify-content: center;
     padding: 0;
+    width: 100%;
 }
 .mainimg {
-  display: block;
+  display: none;
 }
 section {
     display: flex;
@@ -336,9 +337,14 @@ section {
 }
 footer {
     display: flex;
-    justify-content: center;
     flex-wrap: wrap;
-    text-align: center;
+    flex-direction: column;
+    text-align:left;
+    width: 100%;
+}
+#copyright {
+  text-align: center;
+  padding-left: 100px;
 }
 nav { display: flex;
   flex-direction: column-reverse;
